# Allocator-Switcher

./: .gitmodules  CMakeLists.txt  Global-Switcher.hpp  MemoryManager.hpp  MemoryManagerSwitcher.hpp
src/: CAllocatedOn.cpp  CAllocatedOn.hpp  CAllocatorDebugWrapper.hpp  CAllocatorWrapper.hpp  CCurrentMemoryManagerStrategy.cpp  CCurrentMemoryManagerStrategy.hpp  CGlobalManager.cpp  CMAllocator.hpp  CMemoryManagerSwitcher.cpp  CMemoryManagerSwitcher.hpp  CRuntimeHeapStrategy.cpp  CRuntimeHeapStrategy.hpp  CStackAllocatorWrapper.cpp  CStackAllocatorWrapper.hpp  DefaultAllocator.cpp  DefaultAllocator.hpp  Global-Switcher.cpp  Global-Switcher.hpp  GlobalManager.cpp  GlobalManager.hpp  MemoryManager.hpp  StackAllocator.hpp  TestLib.hpp  XorList.hpp
test/: GeneralTest.cpp  SwitcherTester.cpp  TestAllocator.cpp  TestOverload.cpp
